package com.example.orderbackend.domain.model;

public enum SubscriptionType {
    MONTHLY,
    DATE_RANGE
}
